# IPEDU

./: .gitignore  CMakeLists.txt  README.md  version.txt
build_scripts/aarch64_qnx/: build_qnx700.sh
build_scripts/intellinux/: intel_linux_cmake_64.sh
build_scripts/windows/: vs2015_x64_debug_cmake_build.bat  vs2015_x64_release_cmake_build.bat
build_scripts/x86_64_linux/: build.sh
cmake/: aarch64_linux.toolchain.cmake  arm_linux.toolchain.cmake  arm_linux_32.cmake  arm_linux_64.cmake  intel_linux_64.cmake
source/3rdparts/iflytek_cv3_model_pack_unpack/: CMakeLists.txt  README.md  version.txt
source/3rdparts/iflytek_cv3_model_pack_unpack/PackUnpackApi/: CMakeLists.txt  file_utils.cpp  iflytek_cv3_pack_unpack_api_debug.def  iflytek_cv3_pack_unpack_api_release.def  pack.cpp  unpack.cpp
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/aarch64_linux/: build.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/aarch64_qnx/: build_qnx700.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/android/: android_linux_cmake_r16b.bat  android_linux_r16b_auto_build.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/armlinux/: arm_linux_cmake_32.sh  arm_linux_cmake_64.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/intellinux/: intel_linux_cmake_64.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/ios/: ios.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/qnx/: qnx_700.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/windows/: vs2015_cmake_build.bat
source/3rdparts/iflytek_cv3_model_pack_unpack/build_scripts/x86_64_linux/: build.sh
source/3rdparts/iflytek_cv3_model_pack_unpack/cmake/: intel_linux_64.cmake  platform.cmake
source/3rdparts/iflytek_cv3_model_pack_unpack/include/: iflytek_cv3_pack_unpack_api.h  iflytek_cv3_pack_unpack_error_module.h  iflytek_cv3_pack_unpack_type.h
source/3rdparts/iflytek_cv3_model_pack_unpack/res/: test.conf  test.json
source/3rdparts/iflytek_cv3_model_pack_unpack/test/: CMakeLists.txt  test_pack_unpack.cpp
source/3rdparts/iflytek_file_encrypt_decrpyt/: README.md
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/: CMakeLists.txt  aarch64_linux.sh  aarch64_linux.toolchain.cmake  aarch64_qnx700.sh  android_linux.cmake  android_linux_cmake_r10e.bat  android_linux_cmake_r13b.bat  android_linux_cmake_r16b.bat  arm_linux.sh  arm_linux.toolchain.cmake  arm_linux_32.cmake  arm_linux_64.cmake  arm_linux_cmake_32.sh  arm_linux_cmake_64.sh  cmake_build_winVS_2010.bat  cmake_build_winVS_2012.bat  cmake_build_winVS_2015.bat  cortex_cmake.sh  cortex_intel.cmake  intel_linux.cmake  intel_linux_archarm.sh  intel_linux_cmake.sh  ios.sh  qnx.toolchain.cmake  qnx650_linux_cmake.bat  qnx660_linux_cmake.bat  qnx_700.sh  qnx_win.cmake  x86_64_linux.sh
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/doc/: 加解密接口开发文档.doc
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/include/common/: common.h  iflyTypeDef.h  isymdef.h
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/include/decrypt/: decrypt.h
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/include/encrypt/: encrypt.h
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/source/common/: common.c
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/source/decrypt/: decrypt.c
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/source/encrypt/: encrypt.c
source/3rdparts/iflytek_file_encrypt_decrpyt/cmake/source/encrypt_test/: encrypt_test.c
source/iPEDUApi/: CMakeLists.txt  ipedu_api.cpp  ipedu_api_debug.def  ipedu_api_release.def
source/include/: ipedu_api.h  ipedu_config.h.in  ipedu_error_module.h  ipedu_type.h
source/test/: CMakeLists.txt  test.cpp
